--- a/packages/lambda/lambda_automation.yaml
+++ b/packages/lambda/lambda_automation.yaml
@@ -1,9 +1,8 @@
   automation:
-  ### heat pump cycling counter ############################
-  ####### the initial values for the cycling must be taken once from the Lambda heat pump and entered into the sensor.
   - id: '1727726999508'
     alias: increment HP Timings
     description: Taktungen der WP hochzählen
+    mode: single
     triggers:
       - entity_id:
           - sensor.eu08l_hp1_operating_state
@@ -16,41 +15,41 @@
         id: HotWater
         trigger: state
     conditions: []
-    action:
-    - choose:
-      - conditions:
-        - condition: trigger
-          id:
-          - Heating
-        sequence:
-        - action: counter.increment
-          metadata: {}
-          data: {}
-          target:
-            entity_id:
-            - counter.eu8l_heat_pump_cycling_diff
-            - counter.eu8l_heat_pump_cycling_daily
-      - conditions:
-        - condition: trigger
-          id:
-          - HotWater
-        sequence:
-        - action: counter.increment
-          metadata: {}
-          data: {}
-          target:
-            entity_id:
-            - counter.eu08l_hot_water_cycling_diff
-            - counter.eu08l_hot_water_cycling_daily
-    mode: single
+    actions:
+      - choose:
+          - conditions:
+              - condition: trigger
+                id:
+                  - Heating
+            sequence:
+              - action: counter.increment
+                metadata: {}
+                data: {}
+                target:
+                  entity_id:
+                    - counter.eu08l_heat_pump_cycling
+                    - counter.eu08l_heat_pump_cycling_daily
+          - conditions:
+              - condition: trigger
+                id:
+                  - HotWater
+            sequence:
+              - action: counter.increment
+                metadata: {}
+                data: {}
+                target:
+                  entity_id:
+                    - counter.eu08l_hot_water_cycling
+                    - counter.eu08l_hot_water_cycling_daily
+    
   - id: '1727727092095'
     alias: reset counter for daily HP timing
     description: Zähler für daily tacktung WP resetten
     triggers:
-      - at: "00:00:00"
-        trigger: time
+    - at: 00:00:00
+      trigger: time
     conditions: []
-    action:
+    actions:
     - action: counter.reset
       metadata: {}
       data: {}
@@ -59,105 +58,22 @@
         - counter.eu8l_heat_pump_cycling_daily
         - counter.eu08l_hot_water_cycling_daily
     mode: single
-  
-  - id: '1728482010496'
-    alias: kWh HotWater
+  - id: '6543235'
+    alias: set Lambda Raumtemp
     description: ''
     triggers:
-    - trigger: state
-      entity_id:
-      - sensor.eu08l_hp1_operating_state
-      from: '2'
-      id: from2
-    - trigger: state
-      entity_id:
-      - sensor.eu08l_hp1_operating_state
-      id: to2
-      to: '2'
+    - minutes: /5
+      trigger: time_pattern
+      enabled: false
+    - entity_id:
+      - sensor.thermometer_wohnzimmer_temperature
+      trigger: state
     conditions: []
     actions:
-    - choose:
-      - conditions:
-        - condition: trigger
-          id:
-          - to2
-        sequence:
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
-              | float(0) /1000}}'
-          target:
-            entity_id: input_number.eu08l_energy_hot_water_start
-      - conditions:
-        - condition: trigger
-          id:
-          - from2
-        sequence:
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
-              | float(0) /1000}}'
-          target:
-            entity_id: input_number.eu08l_energy_hot_water_end
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''input_number.eu08l_energy_hot_water_sum'') | float(0) + (states(''input_number.eu08l_energy_hot_water_end'')
-              |float(0) - states(''input_number.eu08l_energy_hot_water_start'') |float(0)
-              ) | float(0)}}'
-          target:
-            entity_id: input_number.eu08l_energy_hot_water_sum
+    - data:
+        hub: EU08L
+        address: 5004
+        value:
+        - '{{ (float(states(''sensor.thermometer_wohnzimmer_temperature'')) *10 ) |round(0)  }}'
+      action: modbus.write_register
     mode: single
-  - id: '1728483475534'
-    alias: Heating kWh
-    description: ''
-    triggers:
-    - trigger: state
-      entity_id:
-      - sensor.eu08l_hp1_operating_state
-      from: '1'
-      id: from1
-    - trigger: state
-      entity_id:
-      - sensor.eu08l_hp1_operating_state
-      id: to1
-      to: '1'
-    conditions: []
-    actions:
-    - choose:
-      - conditions:
-        - condition: trigger
-          id:
-          - to1
-        sequence:
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
-              | float(0) /1000}}'
-          target:
-            entity_id: input_number.eu08l_energy_heating_start
-      - conditions:
-        - condition: trigger
-          id:
-          - from1
-        sequence:
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
-              | float(0) /1000}}'
-          target:
-            entity_id: input_number.eu08l_energy_heating_end
-        - action: input_number.set_value
-          metadata: {}
-          data:
-            value: '{{states(''input_number.eu08l_energy_heating_sum'') | float(0) + (states(''input_number.eu08l_energy_heating_end'')
-              |float(0) - states(''input_number.eu08l_energy_heating_start'') |float(0)
-              ) | float(0)}}'
-          target:
-            entity_id: input_number.eu08l_energy_heating_sum
-    mode: single
-  
