--- a/packages/mold/mold.yaml
+++ b/packages/mold/mold.yaml
@@ -1,27 +1,17 @@
-### Schimmel Sensoren, die Integartion ist im HA vorhanden, es müssen nur die Sensoren angelegt werden.
-# je sensor muss Temperatur & Luftfeuchtigkeit des Raumes und die Außentemperatur angegeben werden.
-# Ganz nett ist das ein custom:multiple-entity-row card, die alles in einem Element darstellt:
-#type: entities
-#entities:
-#  - entity: sensor.meter_e58f
-#    type: custom:multiple-entity-row
-#    name: Wohnzimmer
-#    show_state: false
-#    entities:
-#      - entity: sensor.meter_e58f
-#        name: Temperatur
-#      - entity: sensor.meter_e58f_luftfeuchtigkeit
-#        name: Humidity
-#      - entity: sensor.schimmel_wohnzimmer
-#        name: Schimmel
 sensor:  
   - platform: mold_indicator
-    indoor_temp_sensor: sensor.temperatur_abstellraum_temperature
-    indoor_humidity_sensor: sensor.abstellraum_humidity
+    indoor_temp_sensor: sensor.thermometer_abstellkeller_temperature
+    indoor_humidity_sensor: sensor.thermometer_abstellkeller_humidity
+    outdoor_temp_sensor: sensor.indoor_outdoor_meter_5024
+    calibration_factor: 2.0
+    name: Schimmel Abstellkeller
+
+  - platform: mold_indicator
+    indoor_temp_sensor: sensor.0x28dba7fffe0792d8_temperature
+    indoor_humidity_sensor: sensor.0x28dba7fffe0792d8_humidity
     outdoor_temp_sensor: sensor.indoor_outdoor_meter_5024
     calibration_factor: 2.0
     name: Schimmel Abstellraum
-
 
   - platform: mold_indicator
     indoor_temp_sensor: sensor.thermometer_gastezimmer_temperatur
@@ -45,15 +35,30 @@ sensor:
     name: Schimmel Bad 2OG
 
   - platform: mold_indicator
-    indoor_temp_sensor: sensor.thermometer_schlafzimmer_temperatur
-    indoor_humidity_sensor: sensor.thermometer_schlafzimmer_luftfeuchtigkeit
+    indoor_temp_sensor: sensor.thermometer_schlafzimmer_temperature
+    indoor_humidity_sensor: sensor.thermometer_schlafzimmer_humidity
     outdoor_temp_sensor: sensor.indoor_outdoor_meter_5024
     calibration_factor: 2.0
     name: Schimmel Schlafzimmer
     
   - platform: mold_indicator
-    indoor_temp_sensor: sensor.meter_e58f
-    indoor_humidity_sensor: sensor.meter_e58f_luftfeuchtigkeit
+    indoor_temp_sensor: sensor.thermometer_wohnzimmer_temperature
+    indoor_humidity_sensor: sensor.thermometer_wohnzimmer_humidity
     outdoor_temp_sensor: sensor.indoor_outdoor_meter_5024
     calibration_factor: 2.0
     name: Schimmel Wohnzimmer
+    
+  - platform: mold_indicator
+    indoor_temp_sensor: sensor.thermometer_vitrine_wohnzimmer_haus
+    indoor_humidity_sensor: sensor.thermometer_vitrine_wohnzimmer_humidity
+    outdoor_temp_sensor: sensor.indoor_outdoor_meter_5024
+    calibration_factor: 2.0
+    name: Schimmel Wohnzimmer Vitrine
+
+  - platform: mold_indicator
+    indoor_temp_sensor: sensor.thermometer_wohnzimmer_temperature
+    indoor_humidity_sensor: sensor.thermometer_wohnzimmer_humidity
+    outdoor_temp_sensor: sensor.thermometer_wohnzimmer_temperature
+    calibration_factor: 2.0
+    name: Schimmel Treppenhaus 2OG
+  
