--- a/packages/lambda/lambda_automation.yaml
+++ b/packages/lambda/lambda_automation.yaml
@@ -68,6 +68,7 @@
     - entity_id:
       - sensor.thermometer_wohnzimmer_temperature
       trigger: state
+      enabled: false
     conditions: []
     actions:
     - data:
